--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -12,7 +12,45 @@
         <module>../taotao-common</module>
         <module>../taotao-manager</module>
         <module>../taotao-manager-web</module>
+        <module>../itcast-dubbo-interface</module>
+        <module>../itcast-dubbo-provider</module>
     </modules>
+
+<!--添加依赖-->
+    <dependencies>
+
+<!--        spring boot的依赖-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.3.6.RELEASE</version>
+        </dependency>
+
+        <!--2. 添加dubbo的依赖-->
+        <!--3.添加zookeeper的依赖-->
+        <!-- dubbo的依赖 -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.7.6</version>
+        </dependency>
+
+        <!-- zk的依赖 -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <version>2.7.6</version>
+            <type>pom</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
